--- a/newwebapp/Pages/Index.cshtml
+++ b/newwebapp/Pages/Index.cshtml
@@ -6,6 +6,6 @@
 
 <div class="text-center">
 
-<h1 class="display-4">Welcome to DevOps journey with Nishikesh this is branch ruleset</h1>
+<h1 class="display-4">Welcome to DevOps journey with Nishikesh this is main branch</h1>
   <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
